--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>FilmyDB</h1>
-        <a href="faces/novy.xhtml">Nahodiť nový</a> 
+        <a href="novy.xhtml">Nahodiť nový</a> 
     </body>
 </html>
