--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,5 +7,13 @@
     <body>
         <h1>FilmyDB</h1>
         <a href="novy.xhtml">Nahodiť nový</a> 
+        <a href="/novy.xhtml">Nahodiť nový</a> 
+        <a href="/Web Pages/novy.xhtml">Nahodiť nový</a> 
+        <a href="novy.jsf">Nahodiť nový</a> 
+        <a href="/novy.jsf">Nahodiť nový</a> 
+        <a href="/Web Pages/novy.jsf">Nahodiť nový</a> 
+        <a href="novy.jsp">Nahodiť nový</a> 
+        <a href="/novy.jsp">Nahodiť nový</a> 
+        <a href="/Web Pages/novy.jsp">Nahodiť nový</a> 
     </body>
 </html>
