--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -1,12 +1,21 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Zdravicko, alebo tiez ${appBean.privitanie}
+        Nahadzovanie nových filmov
+        
+        <h:form>
+            <h:inputText>
+                <f:ajax listener="#{cucaInfo.zrobHladanie}" render="idObsah" />
+            </h:inputText>
+        </h:form>
+        
+        <h:outputText id="idObsah" value="#{cucaInfo.obsaznik}" />
     </h:body>
 </html>
 
