--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -16,7 +16,7 @@
         </h:form>
         
         <h:panelGroup id="filmy" rendered="#{appBean.mameVysledky}">
-            <h:outputText value="${appBean.obsah}" />
+            <h:outputText value="${appBean.obsah}" escape="false" />
         </h:panelGroup>
         
     </h:body>
