--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -15,6 +15,8 @@
             <h:commandButton value="Hľadaj" action="#{appBean.zrobHladanie}" label="Hľadaj" />
         </h:form>
         
+        <h:outputText value="#{appBean.log}"/>
+        
         <h:panelGroup id="filmy" rendered="#{appBean.mameVysledky}">
             <h:outputText value="Výsledky:"/>
             <!--<h:outputText value="${appBean.obsah}" escape="false" />-->
