--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -51,6 +51,7 @@
                 
                 <h:outputLabel>ČSFD link:</h:outputLabel>
                 <h:inputText value="${novyBean.film.link}"/>
+            </h:panelGrid>
         </h:form>
         
     </h:body>
