--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -23,7 +23,7 @@
                 <!--<h:outputText value="${novyBean.obsah}" escape="false" />-->
                 <!--<f:selectItems value="#{novyBean.vysledkyHladania}" />-->
                 <h:selectOneListbox>
-                    <f:selectItems value="#{novyBean.vysledkyHladania}" var="entry" actionListener="" itemValue="#{entry.getNazovRok}" itemLabel="#{entry.link}" />
+                    <f:selectItems value="#{novyBean.vysledkyHladania}" var="entry" actionListener="" itemValue="#{entry.getNazovRok()}" itemLabel="#{entry.link}" />
                 </h:selectOneListbox>
                 <h:commandButton value="Natiahni" action="#{novyBean.natiahniUdaje}" label="Natiahni" />
             </h:form>
