cucanie opisu filmu 2

--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -38,7 +38,7 @@
                 <h:inputText value="${novyBean.film.rok}"/>
                 
                 <h:outputLabel>Dĺžka (minutáž):</h:outputLabel>
-                <h:inputText value="${novyBean.film.rok}"/>
+                <h:inputText value="${novyBean.film.minutaz}"/>
                 
                 <h:outputLabel>Herci:</h:outputLabel>
                 <h:inputText value="${novyBean.film.herci}"/>
