cucanie opisu filmu 4

--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -15,7 +15,7 @@
             <h:commandButton value="Hľadaj" action="#{novyBean.zrobHladanie}" label="Hľadaj" />
         </h:form>
         
-        <!--<h:outputText value="#{novyBean.log}"/>-->
+        <h:outputText value="#{novyBean.log}"/>
         
         <h:panelGroup id="filmy" rendered="#{novyBean.mameVysledky}">
             <h:form>
