Entity, facady, selecty a dalsie

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Úvod</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>FilmyDB</h1>
-        <a href="novy.xhtml">Nahodiť nový</a> 
-    </body>
-</html>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="./WEB-INF/masterpage.xhtml"
+                xmlns:pe="http://primefaces.org/ui/extensions"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core">
+    <ui:define name="content">
+        <br />
+        <h2>Filmová databáza</h2>
+        <br/>
+    </ui:define>
+</ui:composition>
