cucajInfo fix, primefaces fix, DB facade fix

--- a/src/main/webapp/WEB-INF/masterpage.xhtml
+++ b/src/main/webapp/WEB-INF/masterpage.xhtml
@@ -8,14 +8,14 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="css/default.css"/>
+        <!--<h:outputStylesheet name="css/default.css"/>-->
         <ui:insert name="script">
         </ui:insert>
         <title>Filmy DB</title>
     </h:head>
 
     <h:body>
-        <h:outputScript name="scripts/scripts.js" target="head" />
+        <!--<h:outputScript name="scripts/scripts.js" target="head" />-->
         <p:layoutUnit position="top" resizable="false">  
             <ui:insert name="top">
                 <!--<h:graphicImage alt="Logo" library="images" name="logo.jpg" style="margin: 13px"/>-->
@@ -43,7 +43,6 @@
                         </p:submenu>-->  
                     </p:menubar>
                 </h:panelGrid>
-                <p:separator/>
             </ui:insert>
         </p:layoutUnit>
         <div id="content">
