--- a/src/main/webapp/novy.xhtml
+++ b/src/main/webapp/novy.xhtml
@@ -64,7 +64,7 @@
                     <p:inputTextarea value="#{novyBean.film.content}"/>-->
                 </p:panelGrid>
 
-                <p:commandButton value="Zaloz" action="#{novyBean.zalozFilm}" label="Založ do databázy" onclick="PF('statusDialog').show();" oncomplete="PF('statusDialog').hide();" />
+                <p:commandButton value="Založ" action="#{novyBean.zalozFilm}" label="Založ do databázy" onclick="PF('statusDialog').show();" oncomplete="PF('statusDialog').hide();" />
             </h:form>
         </h:panelGroup>
         
