--- a/src/main/webapp/WEB-INF/masterpage.xhtml
+++ b/src/main/webapp/WEB-INF/masterpage.xhtml
@@ -30,6 +30,7 @@
                 <h:panelGrid style="width: 100%;">
                     <p:menubar>
                         <p:menuitem value="Založiť nový" url="/faces/novy.xhtml" />
+                        <p:menuitem value="Vyhľadávanie" url="/faces/vyhladavanie.xhtml" />
 <!--                        <p:submenu label="Tyzdnove planovanie">
                             <p:submenu label="Management">
                                 <p:menuitem value="FDCs" url="/faces/FDCs.xhtml" />
